src/solver/snapshots/resolvo__solver__at_most_one__test__at_most_once_tracker.snap
---
source: src/solver/at_most_one.rs
expression: "clauses.iter().format(\"\\n\")"
snapshot_kind: text
---
¬x1 ∨ ¬v1
¬x2 ∨ v1
¬x1 ∨ ¬v2
¬x2 ∨ ¬v2
¬x3 ∨ ¬v1
¬x3 ∨ v2
¬x4 ∨ v1
¬x4 ∨ v2
