src/solver/snapshots/resolvo__solver__at_most_one__test__at_most_once_tracker_commander.snap
---
source: src/solver/at_most_one.rs
expression: "clauses.iter().format(\"\\n\")"
---
¬x2 ∨ ¬x1
¬x3 ∨ ¬x1
¬x3 ∨ ¬x2
¬x4 ∨ v1
¬x1 ∨ v2
¬x2 ∨ v2
¬x3 ∨ v2
¬v1 ∨ ¬v2
¬x5 ∨ ¬x4
¬x5 ∨ v1
¬x6 ∨ ¬x4
¬x6 ∨ ¬x5
¬x6 ∨ v1
¬x7 ∨ v3
¬v3 ∨ ¬v2
¬v3 ∨ ¬v1
