src/solver/snapshots/resolvo__solver__at_most_one__test__at_most_once_tracker_hybrid.snap
---
source: src/solver/at_most_one.rs
expression: "clauses.iter().format(\"\\n\")"
---
¬x2 ∨ ¬x1
¬x3 ∨ ¬x1
¬x3 ∨ ¬x2
¬x1 ∨ ¬v1
¬x2 ∨ v1
¬x3 ∨ ¬v1
¬x1 ∨ ¬v2
¬x2 ∨ ¬v2
¬x3 ∨ v2
¬x4 ∨ v1
¬x4 ∨ v2
¬x1 ∨ ¬v3
¬x2 ∨ ¬v3
¬x3 ∨ ¬v3
¬x4 ∨ ¬v3
¬x5 ∨ ¬v1
¬x5 ∨ ¬v2
¬x5 ∨ v3
