src/solver/snapshots/resolvo__solver__at_most_one__test__at_most_once_tracker_pairwise.snap
---
source: src/solver/at_most_one.rs
expression: "clauses.iter().format(\"\\n\")"
---
¬x2 ∨ ¬x1
¬x3 ∨ ¬x1
¬x3 ∨ ¬x2
¬x4 ∨ ¬x1
¬x4 ∨ ¬x2
¬x4 ∨ ¬x3
